@@ -20,6 +20,8 @@ Changes to version 2.4-0
   
   o Allow entry of variable names in enter table dialog (suggestion of Beatriz Lacruz).
   
+  o Improved import of Stata files and provision to import SAS b7dat files.
+  
 Changes to Version 2.3-2
 
   o Fixes to Spanish translation (from Manual Munoz Marquez).
